# blank

./: .gitignore  CMakeLists.txt  DEVELOPMENT_PLAN.md  build.bat  run.bat
assets/models/cars/: 2013_lexus_is-f.glb
assets/models/weapons/: highly_detailed_sniper_rifle.glb  low-poly_ak-74m_zenitco.glb  low-poly_benelli_m4.glb  low-poly_scifi_katana.glb  low-poly_vepr_12_molot.glb  low-poly_vhs2_ct.glb  melee_weapon_slade_wilson_blade.glb
assets/shaders/: basic.frag  basic.vert  pbr.frag  pbr.vert  shadow.frag  shadow.vert
src/: main.cpp
src/core/: Engine.cpp  Engine.h  Input.cpp  Input.h  Logger.cpp  Logger.h  Timer.cpp  Timer.h  Window.cpp  Window.h
src/game/: Flashlight.cpp  Flashlight.h  ImpactSystem.cpp  ImpactSystem.h  Weapon.cpp  Weapon.h  WeaponSystem.cpp  WeaponSystem.h  WeaponView.cpp  WeaponView.h
src/physics/: CollisionShapes.cpp  CollisionShapes.h  PhysicsWorld.cpp  PhysicsWorld.h  PlayerController.cpp  PlayerController.h  Vehicle.cpp  Vehicle.h
src/renderer/: Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h
